# fact-form-importer

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
config/: column_mapping.json  field_rules.json  team_exclusions.example.json  team_exclusions.json  vocabularies.example.json
fact_form_importer/: __init__.py  __main__.py  cli.py  config.py  processing.py
fact_form_importer/cleaners/: __init__.py  booleans.py  emails.py  multiselect.py  phones.py  postcodes.py  slug.py  strings.py  times.py
fact_form_importer/execution/: __init__.py  approvals.py  atomic_state.py  business_report.py  fact_api.py  jobs.py  ledger.py  models.py  overlay.py  report.py  review_state.py  service.py
fact_form_importer/ingest/: __init__.py  column_mapping.py  workbook_profiler.py  workbook_reader.py
fact_form_importer/llm/: __init__.py  client.py  normalise.py  openai_client.py  pipeline.py  prompts.py  review.py  schemas.py
fact_form_importer/models/: court_import.py  court_submission.py  issues.py  source.py
fact_form_importer/output/: archive.py  duplicate_review.py  duplicates_workbook.py  fact_api_manifest.py  fact_json.py  logs.py  nsu_workbook.py  submitters.py
fact_form_importer/validators/: base.py  business_rules.py  duplicates.py  fact_api_courts.py  fact_api_vocabularies.py  os_addresses.py  vocabularies.py
fact_form_importer/web/: __init__.py  app.py
git-hooks/: pre-push
scripts/: bootstrap.sh  check_coverage.py  install-git-hooks.sh
tests/fixtures/: profile_sample.csv
tests/unit/: test_api_execution.py  test_archive.py  test_cleaners.py  (+30 more)
(+19 files in other folders)
