[metadata]
name = fact-form-importer
version = 0.1.0
description = Import Microsoft Forms court information exports for FaCT review and API import.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    openpyxl
    pydantic
    email-validator
    phonenumbers
    httpx
    python-dotenv
    tenacity
    openai

[options.extras_require]
dev =
    pytest
    ruff

[options.entry_points]
console_scripts =
    fact-form-importer = fact_form_importer.cli:main

[options.packages.find]
include = fact_form_importer*
